--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-form": "^1.15.0",
+    "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-router": "^1.129.2",
     "@tanstack/react-router-devtools": "^1.129.2",
     "@tanstack/react-start": "^1.129.2",
