--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "embla-carousel-react": "8.5.1",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-day-picker": "9.5.0",
     "react-dom": "^19.0.0",
@@ -70,6 +71,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19.0.8",
     "@types/react-dom": "^19.0.3",
     "@vitejs/plugin-react": "^4.6.0",
