--- a/package.json
+++ b/package.json
@@ -44,9 +44,9 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@tanstack/react-form": "^1.15.0",
     "@tanstack/react-query": "^5.83.0",
-    "@tanstack/react-router": "^1.132.34",
-    "@tanstack/react-router-devtools": "^1.132.34",
-    "@tanstack/react-start": "^1.132.34",
+    "@tanstack/react-router": "1.129.2",
+    "@tanstack/react-router-devtools": "1.129.2",
+    "@tanstack/react-start": "1.129.2",
     "better-auth": "^1.3.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -81,7 +81,7 @@
     "tailwindcss": "^3.4.17",
     "tsx": "^4.20.3",
     "typescript": "^5.7.2",
-    "vite": "^7.1.9",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   }
 }
