--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@libsql/client": "^0.15.10",
+    "@marsidev/react-turnstile": "^1.3.1",
     "@netlify/blobs": "^10.1.0",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
