--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@tanstack/react-router": "^1.132.47",
     "@tanstack/react-router-devtools": "^1.132.47",
     "@tanstack/react-start": "^1.132.47",
+    "@tanstack/start-static-server-functions": "^1.134.13",
     "better-auth": "^1.3.28",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
